# boost_warnings_minimal_demo

./: .gitignore  CMakeLists.txt  README.md  boost_patch_ivs.patch  build.bat  build_bare.bat  build_cmake.bat  get_boost.sh  hello.cpp
